--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,36 @@
-title: devlopr
+title: NudeCelebrityPic
 subtitle: A Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a Jekyll Theme Built For Developers
+  NudeCelebrityPic is THE Website Bring You The Best Sexual Experience
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
-    - text: About Me
-      url: /about
-    - text: Blog
+    #- text: About 
+      #url: /about
+    - text: Post
       url: /blog
-    - text: Gallery
+    - text: Terms of Service
       url: /gallery
     - text: Shop
       url : /shop
     - text: Contact Me
       url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+    #- text: Styleguide
+      #url: /styleguide
+    #- text: Get Started
+      #url: /get-started
 
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
+author: NudeCelebrityPic
+author_bio: Welcome to NudeCelebrityPic. Join Our Newsletter to Unlock More Awesome Pics. :D
+author_email: "nudecelebritypic@gmail.com"
 author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+author_website_url: "https://nudecelebritypic.com"
+typewrite-text: Join Our Newsletter to Unlock More Awesome Pics
 
 author_work_experiences:
             - company_name: Google
@@ -67,20 +67,20 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: Lostrovski2
+#github_username:  sujaykundu777
+#facebook_username: johndoe
+#linkedin_username: johndoe
+#behance_username: johndoe
+#instagram_username: johndoe
+#medium_username: johndoe
+#telegram_username: johndoe
+#dribbble_username: johndoe
+#flickr_username: johndoe
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-# disqus_shortname: sujay-kundu
+disqus_shortname: nudecelebrity
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
@@ -90,7 +90,7 @@ wakatime_username: sujaykundu777
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: nudecelebritypic@gmail.com
 
 # syntax highlighter
 markdown: kramdown
@@ -104,11 +104,11 @@ show_author_project_details: true
 
 # algolia search
 algolia:
-  application_id: D9WA1YKTRQ
+  application_id: NDMR582XOF
   index_name: blog_posts # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: 'article'
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+  search_only_api_key: e1a0f804aef1582447e4a5a1e6bdb29a
 
 # pagination of posts
 paginate: 4
